--- a/app_rankine/app/src/main/res/layout/activity_licenca_coolprop.xml
+++ b/app_rankine/app/src/main/res/layout/activity_licenca_coolprop.xml
@@ -7,7 +7,7 @@
     android:fillViewport="true"
     tools:context=".LicencaCoolprop">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,5 +33,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
