--- a/app_rankine/app/src/main/res/layout/activity_saidas_reaquecido.xml
+++ b/app_rankine/app/src/main/res/layout/activity_saidas_reaquecido.xml
@@ -8,7 +8,7 @@
     tools:context=".Saidas.SaidasReaquecido">
 
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -37,7 +37,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-        <android.support.constraint.Guideline
+        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -767,5 +767,5 @@
             app:layout_constraintTop_toBottomOf="@+id/txt_pressao_rendimento"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
