--- a/app_rankine/app/src/main/res/layout/activity_tela_opcoes_rankine.xml
+++ b/app_rankine/app/src/main/res/layout/activity_tela_opcoes_rankine.xml
@@ -8,7 +8,7 @@
     tools:context=".TelaOpcoesRankine">
 
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -124,5 +124,5 @@
             app:layout_constraintTop_toBottomOf="@+id/textView"
             app:srcCompat="@drawable/im_curva_saturacao_ts" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
