--- a/app_rankine/app/src/main/res/layout/activity_tela_rank_regenerativo.xml
+++ b/app_rankine/app/src/main/res/layout/activity_tela_rank_regenerativo.xml
@@ -8,7 +8,7 @@
     tools:context=".TelaRankRegenerativo">
 
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -109,6 +109,6 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
