--- a/app_rankine/app/src/main/res/layout/activity_tela_rank_simples.xml
+++ b/app_rankine/app/src/main/res/layout/activity_tela_rank_simples.xml
@@ -10,7 +10,7 @@
 
 
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -110,6 +110,6 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
