--- a/app_rankine/app/src/main/res/layout/activity_tela_resultados_reaquecido.xml
+++ b/app_rankine/app/src/main/res/layout/activity_tela_resultados_reaquecido.xml
@@ -8,7 +8,7 @@
     tools:context=".Entradas.TelaResultadosReaquecido">
 
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -195,5 +195,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edt_temperatura" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
