--- a/app_rankine/app/src/main/res/layout/activity_tela_sobre.xml
+++ b/app_rankine/app/src/main/res/layout/activity_tela_sobre.xml
@@ -7,7 +7,7 @@
     android:fillViewport="true"
     tools:context=".TelaSobre">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -87,6 +87,6 @@
             app:layout_constraintTop_toBottomOf="@+id/txt_titulo_dois"
             app:layout_constraintVertical_bias="0.0" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
